$Id$

****************************** DRUPAL 5 BRANCH ********************************

October 5, 2008
---------------
#317276 by Michelle, Edlund: Fixed issues with private message module.
#317174 by Michelle: Moved CSS/JS calls out of menu code except for main forum pages to avoid conflicts with other theme changing modules.

October 1, 2008
---------------
#314205 by Michelle: More style cleanup.
NOISSUE by Michelle: Code cleanup.
#313693 by nigel: Sped up function to retrieve the count of new comments in a forum.
#312958 by Michelle: Added $container_description to forum list template.
NOISSUE by Michelle: Added some hoop jumping code to make the comment wrapper template work.

September 28, 2008
------------------
#314205 by Michelle, stephthegeek: Lots of style cleanup.
NOISSUE by Michelle: Changed 'forum user' to 'author pane' for clarity.
#311136 by Michelle: Backported 'last seen' from D6.

September 27, 2008
------------------
#271471 by stephthegeek: Added naked_stacked style
NOISSUE by Michelle: General style fixes. Work in progress; still some glitches.
#314205 by Michelle: First round of style cleanup.

September 26, 2008
------------------
#303549 by Michelle: Cleaned up author info pane.
#250112 by Michelle: Added userpoints categorization. Also added branding suggested by Vuds in #310460. Also fixed missing t()s.

September 25, 2008
------------------
#312602 by Michelle, merlinofchaos: Fixed broken query for counting the unread comments in a forum.
#303740 by nigel, Michelle: Fixed lots of little bugs found with E_ALL warnings.

September 24, 2008
------------------
#306633 by Michelle: Added more icons.
#291084 by halkeye: Cleared options before collapsable container setting.
NOISSUE by waawaamilk: Fixed bug with counting forums in forum list preprocess.
#306633 by Michelle: Renamed most of the icons for a more consistant naming and replaced some.

September 18, 2008
------------------