@@ -45,13 +45,6 @@ function advanced_forum_menu($may_cache) {
                'access' => user_access('administer advanced forum'),
     );
    
-    $items[] = array(
-               'path' => "advanced_forum/collapse",
-               'callback' => 'advanced_form_ajax',
-               'access' => user_access('access content'),
-               'type' => MENU_CALLBACK,
-   );
-    
   }
   elseif (arg(0) == 'forum') {   
     // Add the CSS & JS since we know we're on a page that needs them
@@ -100,14 +93,6 @@ function advanced_forum_settings_page() {
       $options[$forum_or_container->tid] = $forum_or_container->name;
     }
   }
-
-  $form['advanced_forum_collapse_defaults'] = array(
-    '#type' => 'checkboxes', 
-    '#title' => t('Default collapsed containers'), 
-    '#default_value' => variable_get('advanced_forum_collapse_defaults', array()),
-    '#options' => $options,
-    '#description' => t('Check containers to collapse by default.'),
-  );
 
   // Hide 'created' column
   $form['advanced_forum_hide_created'] = array(
@@ -1071,41 +1056,6 @@ function advanced_forum_path_to_images() {
   return $image_path;
 }
 
-// COLLAPSABLE CONTAINERS ****************************************************/
-
-/**
- * Allows users with javascript enabled to collapse / expand containers.
- */
-function advanced_form_ajax($op, $container_id = NULL) {
-  global $base_url;
-  $base_url = str_replace('.', '_', $base_url);
-  switch($op) {
-    case 'load':
-      if(!isset($_COOKIE[$base_url.'_advanced_forum'])) {
-        //Set defaults in the cookie.
-        $defaults = variable_get('advanced_forum_collapse_defaults', array());
-        setcookie($base_url.'_advanced_forum[tids]', serialize($initial_state), time()+60*60*24*30, '/');
-      }
-      else {
-        $initial_state = unserialize($_COOKIE[$base_url.'_advanced_forum']['tids']);
-      }
-      print drupal_json(array('tids' => $initial_state));
-      break;
-    case 'toggle':
-      if(!$container_id)
-        exit;
-      if(!isset($_COOKIE[$base_url.'_advanced_forum'])) {
-        $defaults = variable_get('advanced_forum_collapse_defaults', array());
-      }
-      else {
-        $initial_state = unserialize($_COOKIE[$base_url.'_advanced_forum']['tids']);
-      }
-      $initial_state[$container_id] = 1 - $initial_state[$container_id];
-      setcookie($base_url.'_advanced_forum[tids]', serialize($initial_state), time()+60*60*24*30, '/');
-      break;
-  }
-}
-
 /**
  * This function returns true if the node/comment should be themed and 
  * otherwise treated as a forum post.
@@ -1374,7 +1324,4 @@ function advanced_forum_drupal_adds() {
   $style_directory = advanced_forum_path_to_style();
   drupal_add_css("$style_directory/advanced_forum-structure.css" );
   drupal_add_css("$style_directory/advanced_forum.css" );
-
-  drupal_add_js(drupal_get_path('module', 'advanced_forum') . '/advanced_forum.js');
-  drupal_add_js(array('advanced_forum_ajax' => url('advanced_forum/collapse')), 'setting');
 }
